--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "weather-package",
   "main": "./lib/weather-package",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Shows weather, temperature and pressure right in your editor.",
-  "activationEvents": ["weather-package:toggle"],
+  "activationEvents": [
+    "weather-package:toggle"
+  ],
   "repository": "https://github.com/gladimdim/weather-package",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
